fixed scrollbar

--- a/static/homepage.css
+++ b/static/homepage.css
@@ -86,3 +86,14 @@ html, body {
 @media all and (max-width: 991px) {
     #map-outer  { height: 650px }
 }
+
+::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 7px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(0,0,0,.5);
+    -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
+}
